--- a/src/devplex.GitServer.Web/Views/Help/Index.cshtml
+++ b/src/devplex.GitServer.Web/Views/Help/Index.cshtml
@@ -1,45 +1,51 @@
 ﻿@model dynamic
 
-<h1>FAQ</h1>
+<div class="row">
+  <div class="large-12 columns">
+    <h1>FAQ</h1>
 
-<h2>How to fix the SSL3 error?</h2>
-<p>
-  Open or create the file 
-</p>
-<code>C:\Users\@(string.IsNullOrWhiteSpace(User.Identity.Name) ? "{YourAccount}" : User.Identity.Name)\.gitconfig</code>
-<p>Add the following lines:</p>
-<code>
-  [http]
+    <h2>How to fix the SSL3 error?</h2>
+    <p>
+      Open or create the file 
+    </p>
+    <code>C:\Users\@(string.IsNullOrWhiteSpace(User.Identity.Name) ? "{YourAccount}" : User.Identity.Name)\.gitconfig</code>
+    <p>Add the following lines:</p>
+    <code>[http]
   sslVerify = true
   sslCAinfo = C:/Users/@(string.IsNullOrWhiteSpace(User.Identity.Name) ? "{YourAccount}" : User.Identity.Name)/devplex-ssl.pem
-</code>
-<p>
-  Open or create the file 
-</p>
-<code>C:\Users\@(string.IsNullOrWhiteSpace(User.Identity.Name) ? "{YourAccount}" : User.Identity.Name)\devplex-ssl.pem</code>
-<p>Add the following certificates:</p>
-<ul>
-  <li>devplex Root CA
-    <ul>  <li>devplex Sub CA 01</li>
-      <ul><li>devplex Git SSL Certificate</li></ul></ul>
-  </li>
+    </code>
+    <p>
+      Open or create the file 
+    </p>
+    <code>C:\Users\@(string.IsNullOrWhiteSpace(User.Identity.Name) ? "{YourAccount}" : User.Identity.Name)\devplex-ssl.pem</code>
+    <p>Add the following certificates:</p>
+    <ul>
+      <li>devplex Root CA
+    <ul>
+      <li>devplex Sub CA 01</li>
+      <ul>
+        <li>devplex Git SSL Certificate</li>
+      </ul>
+    </ul>
+      </li>
 
-  <li>DigiCert HighAssurance EV Root CA
+      <li>DigiCert HighAssurance EV Root CA
     <ul>
       <li>DigiCert HighAssurance EV CA 1
-        <ul><li>github.com SSL certificate</li></ul>
+        <ul>
+          <li>github.com SSL certificate</li>
+        </ul>
       </li>
     </ul>
 
-  </li>
-</ul>
+      </li>
+    </ul>
 
-<p>created by converting DER encoded *.cer using <a href="http://www.openssl.org/related/binaries.html">openSSL</a> on the powershell command line:</p>
-<code>
-  & "{PathToBinary}\openssl.exe" x509 -in input.cer -inform DER -out output.pem -outform PEM
-</code>
-<p>Or copy the following text from the textbox to the file:</p>
-<textarea class="source">
+    <p>created by converting DER encoded *.cer using <a href="http://www.openssl.org/related/binaries.html">openSSL</a> on the powershell command line:</p>
+    <code>& "{PathToBinary}\openssl.exe" x509 -in input.cer -inform DER -out output.pem -outform PEM
+    </code>
+    <p>Or copy the following text from the textbox to the file:</p>
+    <textarea class="source">
   -----BEGIN CERTIFICATE-----
 MIIG/jCCBOagAwIBAgIQa8iv19TWJI5L7CvGj2671zANBgkqhkiG9w0BAQsFADA5
 MQswCQYDVQQGEwJERTEQMA4GA1UECgwHZGV2cGxleDEYMBYGA1UEAwwPZGV2cGxl
@@ -250,131 +256,129 @@ InuA6gcF1PnH8FNZX7t3ft6TcEFOI8t4eXnELurXZioY99HFfOISeIKNHeyCngGi
 n2Xkw9dJh1tybLEvrG8=
 -----END CERTIFICATE-----
 </textarea>
-<h2>How to create a global ignore file?</h2>
-<p>
-  Open or create the file 
-</p>
-<code>C:\Users\@(string.IsNullOrWhiteSpace(User.Identity.Name) ? "{YourAccount}" : User.Identity.Name)\.gitconfig</code>
-<p>Add the following lines:</p>
-<code>
-  [core]
+    <h2>How to create a global ignore file?</h2>
+    <p>
+      Open or create the file 
+    </p>
+    <code>C:\Users\@(string.IsNullOrWhiteSpace(User.Identity.Name) ? "{YourAccount}" : User.Identity.Name)\.gitconfig</code>
+    <p>Add the following lines:</p>
+    <code>[core]
   excludesfile = C:/Users/@(string.IsNullOrWhiteSpace(User.Identity.Name) ? "{YourAccount}" : User.Identity.Name)/gitignore.txt
-</code>
-<p>
-  <a href="@Url.Content("~/Content/gitignore.txt")" >Download this file</a> and save it as:
-</p>
-<code>C:\Users\@(string.IsNullOrWhiteSpace(User.Identity.Name) ? "{YourAccount}" : User.Identity.Name)\gitignore.txt</code>
+    </code>
+    <p>
+      <a href="@Url.Content("~/Content/gitignore.txt")" >Download this file</a> and save it as:
+    </p>
+    <code>C:\Users\@(string.IsNullOrWhiteSpace(User.Identity.Name) ? "{YourAccount}" : User.Identity.Name)\gitignore.txt</code>
 
-<h2>How to use the windows credential store to remember passwords?</h2>
-<p>
-  Download the latest version of the <a href="http://gitcredentialstore.codeplex.com/">git-credential-winstore.exe</a> application.
+    <h2>How to use the windows credential store to remember passwords?</h2>
+    <p>
+      Download the latest version of the <a href="http://gitcredentialstore.codeplex.com/">git-credential-winstore.exe</a> application.
   Run it! If you have GIT in your PATH, it should just work. If you don't, run:
-</p>
-<code>git-credential-winstore -i C:\Program Files (x86)\Git\bin\Git.exe</code>
+    </p>
+    <code>git-credential-winstore -i C:\Program Files (x86)\Git\bin\Git.exe</code>
 
-<h2>How to create a repository?</h2>
-<p>
-  Since there is (currently) no UI to initialize a new repository, it will be done automagically while cloning it for the first time.
-</p>
-<code>git clone @Url.RepositoryCloneUrl("/company/our/fancy/project.git")</code>
-<br/>
-<code>git clone @Url.RepositoryCloneUrl("/***.git")</code>
+    <h2>How to create a repository?</h2>
+    <p>
+      Since there is (currently) no UI to initialize a new repository, it will be done automagically while cloning it for the first time.
+    </p>
+    <code>git clone @Url.RepositoryCloneUrl("/company/our/fancy/project.git")</code>
+    <br />
+    <code>git clone @Url.RepositoryCloneUrl("/***.git")</code>
 
-<h2>How to add files to a repository?</h2>
-<p>
-  Run the following command on the command prompt
-</p>
-<code>git add --all .</code>
+    <h2>How to add files to a repository?</h2>
+    <p>
+      Run the following command on the command prompt
+    </p>
+    <code>git add --all .</code>
 
-<h2>How to commit/push files to a repository?</h2>
-<p>
-  Run the following command on the command prompt to add all changes to the commit:
-</p>
-<code>git add --all .</code>
-<p>
-  Run the following command on the command prompt to commit to the local repository:
-</p>
-<code>git commit -m {YourMessage}</code>
-<p>Use the folloning prefixes:</p>
-<ul>
-  <li>S: Specification</li>
-  <li>F: Feature</li>
-  <li>R: Refactoring</li>
-  <li>B: Bugfix</li>
-</ul>
-<p>
-  Run the following command on the command prompt to push to remote repository:
-</p>
-<code>git push</code>
-<p>
-  NOTE: If you just cloned a new empty (bare) repository you MUST run:
-</p>
-<code>git push origin master</code>
-
-
-<h2>How to update a local repository with changes from remote?</h2>
-<p>
-  Run the following command on the command prompt to update the local repository:
-</p>
-<code>git pull -u</code>
-
-<h2>How to show the repository log?</h2>
-<p>
-  Run the following command on the command prompt:
-</p>
-<code>git log --graph --pretty=format:'%Cred%h%Creset: %Creset %s %C(bold blue)<%an> %Cgreen(%cr) %Creset ' --abbrev-commit</code>
+    <h2>How to commit/push files to a repository?</h2>
+    <p>
+      Run the following command on the command prompt to add all changes to the commit:
+    </p>
+    <code>git add --all .</code>
+    <p>
+      Run the following command on the command prompt to commit to the local repository:
+    </p>
+    <code>git commit -m {YourMessage}</code>
+    <p>Use the folloning prefixes:</p>
+    <ul>
+      <li>S: Specification</li>
+      <li>F: Feature</li>
+      <li>R: Refactoring</li>
+      <li>B: Bugfix</li>
+    </ul>
+    <p>
+      Run the following command on the command prompt to push to remote repository:
+    </p>
+    <code>git push</code>
+    <p>
+      NOTE: If you just cloned a new empty (bare) repository you MUST run:
+    </p>
+    <code>git push origin master</code>
 
 
-<h2>How to see modified/added/deleted files?</h2>
-<p>
-  Run the following command on the command prompt:
-</p>
-<code>git status</code>
+    <h2>How to update a local repository with changes from remote?</h2>
+    <p>
+      Run the following command on the command prompt to update the local repository:
+    </p>
+    <code>git pull -u</code>
 
-<h2>How to create a new branch?</h2>
-<p>
-  Run the following command on the command prompt:
-</p>
-<code>git branch {NameOfTheBranch}</code>
-
-
-<h2>How to switch between branches?</h2>
-<p>
-  Run the following command on the command prompt:
-</p>
-<code>git checkout {NameOfTheBranch}</code>
+    <h2>How to show the repository log?</h2>
+    <p>
+      Run the following command on the command prompt:
+    </p>
+    <code>git log --graph --pretty=format:'%Cred%h%Creset: %Creset %s %C(bold blue)<%an> %Cgreen(%cr) %Creset ' --abbrev-commit</code>
 
 
-<h2>How to merge a branches?</h2>
-<p>
-  Run the following command on the command prompt to swith over to the main branch:
-</p>
-<code>git checkout {NameOfTheMasterBranch}</code>
-<p>
-  Run the following command on the command prompt to merge a branch into the main branch:
-</p>
-<code>git merge {NameOfTheHotfixOrFeatureBranch}</code>
+    <h2>How to see modified/added/deleted files?</h2>
+    <p>
+      Run the following command on the command prompt:
+    </p>
+    <code>git status</code>
 
-<h2>How to delete a branch?</h2>
-<p>
-  Run the following command on the command prompt to delete a branch:
-</p>
-<code>git branch  -d {NameOfTheBranch}</code>
+    <h2>How to create a new branch?</h2>
+    <p>
+      Run the following command on the command prompt:
+    </p>
+    <code>git branch {NameOfTheBranch}</code>
 
-<h2>How to exit VIM?</h2>
-<p>
-  Run the following command on the command prompt to quit VIM:
-</p>
-<code>[w] + [q]</code>
 
-<h2>How to configure Beyond Compare a visual merge tool?</h2>
-<p>
-  Open or create the file 
-</p>
-<code>C:\Users\@(string.IsNullOrWhiteSpace(User.Identity.Name) ? "{YourAccount}" : User.Identity.Name)\.gitconfig</code>
-<p>Add the following lines:</p>
-<code>
-[merge]
+    <h2>How to switch between branches?</h2>
+    <p>
+      Run the following command on the command prompt:
+    </p>
+    <code>git checkout {NameOfTheBranch}</code>
+
+
+    <h2>How to merge a branches?</h2>
+    <p>
+      Run the following command on the command prompt to swith over to the main branch:
+    </p>
+    <code>git checkout {NameOfTheMasterBranch}</code>
+    <p>
+      Run the following command on the command prompt to merge a branch into the main branch:
+    </p>
+    <code>git merge {NameOfTheHotfixOrFeatureBranch}</code>
+
+    <h2>How to delete a branch?</h2>
+    <p>
+      Run the following command on the command prompt to delete a branch:
+    </p>
+    <code>git branch  -d {NameOfTheBranch}</code>
+
+    <h2>How to exit VIM?</h2>
+    <p>
+      Run the following command on the command prompt to quit VIM:
+    </p>
+    <code>[w] + [q]</code>
+
+    <h2>How to configure Beyond Compare a visual merge tool?</h2>
+    <p>
+      Open or create the file 
+    </p>
+    <code>C:\Users\@(string.IsNullOrWhiteSpace(User.Identity.Name) ? "{YourAccount}" : User.Identity.Name)\.gitconfig</code>
+    <p>Add the following lines:</p>
+    <code>[merge]
   tool = bc3
 [mergetool.bc3]
   path = "C:/Program Files (x86)/Beyond Compare 3/bcomp.exe"
@@ -387,23 +391,25 @@ n2Xkw9dJh1tybLEvrG8=
   prompt = false
 [difftool.bc3]
   cmd = "\"C:/Program Files (x86)/Beyond Compare 3/bcomp.exe\" \"$LOCAL\" \"$REMOTE\""
-</code>
-<p>
-  Run the following command to diff a file:
-</p>
-<code>git difftool {PathToFileToDiff}</code>
-<p>
-  Run the following command on the command merge a file:
-</p>
-<code>git mergetool {PathToFileToDiff}</code>
+    </code>
+    <p>
+      Run the following command to diff a file:
+    </p>
+    <code>git difftool {PathToFileToDiff}</code>
+    <p>
+      Run the following command on the command merge a file:
+    </p>
+    <code>git mergetool {PathToFileToDiff}</code>
 
-<h2>How to revert/see to a specific version of a file?</h2>
-<p>
-  Run the following command to see to a specific version:
-</p>
-<code>git show {HASH}:./{RelativePathToFile}</code>
-<code>git show HEAD@@{YYYY-MM-DD}:./{RelativePathToFile}</code>
-<p>
-  Run the following command to revert to a specific version:
-</p>
-<code>git checkout {HASH}:./{RelativePathToFile}</code>
+    <h2>How to revert/see to a specific version of a file?</h2>
+    <p>
+      Run the following command to see to a specific version:
+    </p>
+    <code>git show {HASH}:./{RelativePathToFile}</code>
+    <code>git show HEAD@@{YYYY-MM-DD}:./{RelativePathToFile}</code>
+    <p>
+      Run the following command to revert to a specific version:
+    </p>
+    <code>git checkout {HASH}:./{RelativePathToFile}</code>
+  </div>
+</div>
