--- a/src/devplex.GitServer.Web/Views/Home/Index.cshtml
+++ b/src/devplex.GitServer.Web/Views/Home/Index.cshtml
@@ -1,3 +1,7 @@
 ﻿@model TreeViewModel
-<h2>Repositories</h2>
-@Html.Partial("_DirectoryTree", Model)
+<div class="row">
+  <div class="large-12 columns">
+    <h2>Repositories</h2>
+    @Html.Partial("_DirectoryTree", Model)
+  </div>
+</div>
