--- a/src/devplex.GitServer.Web/Views/Shared/_Layout.cshtml
+++ b/src/devplex.GitServer.Web/Views/Shared/_Layout.cshtml
@@ -5,24 +5,15 @@
   <title>devplex.GitServer</title>
   <meta name="robots" content="index, nofollow" />
   <link rel="icon" href="@Url.Content("~/Content/images/devplex-git-icon.png")" type="image/png" />
-  <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400" rel="stylesheet" type="text/css" />
   @Styles.Render("~/content/css")
+  @Scripts.Render("~/scripts/modernizr")
 </head>
 <body>
-  <nav class="site-navigation">
-    <a href="@Url.Action("Index", "Home")" class="logo">
-      <img src="@Url.Content("~/Content/images/devplex-git-logo.png")" width="75" height="90" alt="" />
-    </a>
-    <ul class="no-bullets">
-      <li>
-        @Html.ActionLink("Help", "Index", "Help")
-      </li>
-    </ul>
-    <div class="clearfix"></div>
-  </nav>
-  <section class="main">
-    @RenderBody()
-  </section>
+  @Html.Partial("_TopBar")
+  @RenderBody()
   @Scripts.Render("~/scripts/app")
+  <script>
+    $(document).foundation();
+  </script>
 </body>
 </html>
