--- a/src/devplex.GitServer.Web/Views/Repository/Index.cshtml
+++ b/src/devplex.GitServer.Web/Views/Repository/Index.cshtml
@@ -1,19 +1,27 @@
 ﻿@model RepositoryViewModel
-<h1>@Model.Path</h1>
-
-<h2>Clone this repository</h2>
-<code class="console">git clone @Url.RepositoryCloneUrl(Model.Path)</code>
-
-<h2>Browse the repository</h2>
-<ul class="no-bullets">
-  @foreach (var branch in Model.Branches)
-  {
-    <li>@Html.ActionLink(branch, "Tree", "Repository", new { branch }, null) [@Html.ActionLink("Log", "Log", "Repository", new { branch }, null)] [@Html.ActionLink("Zip", "ZipArchive", "Repository", new { branch, path = Model.Path }, null)]</li>
-  }
-</ul>
-
-@if (!string.IsNullOrEmpty(Model.ReadMe))
-{
-  <h2>Readme</h2>
-  @Html.RenderMarkdown(Model.ReadMe)
-}
+<div class="row">
+  <div class="large-12 columns">
+    <h1>@Model.Path</h1>
+  </div>
+</div>
+<div class="row">
+  <div class="large-9 columns">
+    <div class="console">
+      <code>git clone @Url.RepositoryCloneUrl(Model.Path)</code>
+    </div>
+    @if (!string.IsNullOrEmpty(Model.ReadMe))
+    {
+      <hr/>
+      @Html.RenderMarkdown(Model.ReadMe)
+    }
+  </div>
+  <div class="large-3 columns">
+    <ul class="side-nav">
+      @foreach (var branch in Model.Branches)
+      {
+        <li class="active">@Html.ActionLink(branch, "Tree", "Repository", new { branch }, null)</li>
+        <li class="divider"></li>
+      }
+    </ul>
+  </div>
+</div>
