--- a/src/devplex.GitServer.Web/Views/Repository/Tree.cshtml
+++ b/src/devplex.GitServer.Web/Views/Repository/Tree.cshtml
@@ -1,2 +1,47 @@
 ﻿@model RepositoryTreeViewModel
-@Html.Partial("_RepositoryTree", Model)
+<div class="row">
+  <div class="large-12 columns">
+    <h1>@Model.RepositoryPath</h1>
+  </div>
+</div>
+<div class="row">
+  <div class="large-12 columns">
+    <div class="section-container horizontal-nav" data-section="horizontal-nav">
+      <section>
+        <p class="title" data-section-title>@Html.ActionLink("Overview", "Index", "Repository", new { path = Model.RepositoryPath }, null)</p>
+      </section>
+      <section>
+        <p class="title" data-section-title>@Html.ActionLink("Files", "Tree", "Repository", new { branch = Model.Branch, path = Model.RepositoryPath }, null)</p>
+      </section>
+      <section>
+        <p class="title" data-section-title>@Html.ActionLink("Commits", "Log", "Repository", new { branch = Model.Branch, path = Model.RepositoryPath }, null)</p>
+      </section>
+      <section>
+        <p class="title" data-section-title>@Html.ActionLink("Zip", "ZipArchive", "Repository", new { branch = Model.Branch, path = Model.RepositoryPath }, null)</p>
+      </section>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="large-12 columns">
+    <table style="width: 100%;">
+      @foreach (var element in Model.Tree.Directories.OrderBy(x => x.Order).ThenBy(x => x.Name))
+      {
+        <tr>
+          @if (element is TreeDirectory)
+          {
+            <td><i class="icon-folder-close"></i></td>
+            <td>@Html.ActionLink(element.Name, "Tree", "Repository", new { branch = Model.Branch, path = string.Concat(Model.RepositoryPath, "/", element.Path) }, null)</td>
+          }
+          else if (element is TreeFile)
+          {
+            <td><i class="icon-file"></i></td>
+            <td>@Html.ActionLink(element.Name, "Blob", "Repository", new { branch = Model.Branch, path = string.Concat(Model.RepositoryPath, "/", element.Path) }, null)</td>
+          }
+          <td><time datetime="@element.CommitDate.ToString("yyyy-MM-ddTHH:mm:ssZ")">@element.CommitDate</time></td>
+          <td>@element.Message</td>
+        </tr>
+      }
+    </table>
+  </div>
+</div>
