--- a/src/devplex.GitServer.Web/Content/styles.css
+++ b/src/devplex.GitServer.Web/Content/styles.css
@@ -10,13 +10,18 @@
 .console {
   margin-bottom: 40px;
 }
-/* line 14, D:/_Projects/_GitHub/GitServer/src/devplex.GitServer.Web/Content/sass/styles.scss */
-.console code {
-  background: #000000;
-  color: #FFFFFF;
-  padding: 10px;
+
+/* line 15, D:/_Projects/_GitHub/GitServer/src/devplex.GitServer.Web/Content/sass/styles.scss */
+.tree-icon {
+  width: 20px;
 }
+
 /* line 19, D:/_Projects/_GitHub/GitServer/src/devplex.GitServer.Web/Content/sass/styles.scss */
-.console code:before {
-  content: '> ';
+.log-user-image {
+  width: 70px;
+}
+
+/* line 23, D:/_Projects/_GitHub/GitServer/src/devplex.GitServer.Web/Content/sass/styles.scss */
+.section-name {
+  margin-left: 5px;
 }
