--- a/src/devplex.GitServer.Web/Views/Shared/_TopBar.cshtml
+++ b/src/devplex.GitServer.Web/Views/Shared/_TopBar.cshtml
@@ -3,7 +3,7 @@
     <ul class="title-area">
       <!-- Title Area -->
       <li class="name">
-        <h1>@Html.ActionLink("GitServer", "Index", "Home")</h1>
+        <h1>@Html.ActionLink("devplex.GitServer", "Index", "Home")</h1>
       </li>
       <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
       <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
