F: Rendered navigation on history page.

--- a/src/devplex.GitServer.Web/Content/styles.css
+++ b/src/devplex.GitServer.Web/Content/styles.css
@@ -27,6 +27,6 @@
 }
 
 /* line 29, D:/_Projects/GitServer/src/devplex.GitServer.Web/Content/sass/styles.scss */
-.small-h1 {
+.small-headline {
   font-size: 1.4375em;
 }
