--- a/src/devplex.GitServer.Web/Views/Repository/Blob.cshtml
+++ b/src/devplex.GitServer.Web/Views/Repository/Blob.cshtml
@@ -1,7 +1,7 @@
 ﻿@model RepositoryBlob
 <div class="row">
   <div class="large-12 columns">
-    <h1 class="small-h1">@Model.FileName</h1>
+    <h1 class="small-headline">@Model.FileName</h1>
   </div>
 </div>
 <div class="row">
