--- a/src/devplex.GitServer.Web/Views/Repository/Index.cshtml
+++ b/src/devplex.GitServer.Web/Views/Repository/Index.cshtml
@@ -10,10 +10,9 @@
     </ul>
   </div>
   <div class="large-9 columns">
-    <h1 class="small-h1">@Model.Path</h1>
-    
+    <h1 class="small-headline">@Model.RepositoryPath</h1>
     <div class="console">
-      <code>git clone @Url.RepositoryCloneUrl(Model.Path)</code>
+      <code>git clone @Url.RepositoryCloneUrl(Model.RepositoryPath)</code>
     </div>
     @if (!string.IsNullOrEmpty(Model.ReadMe))
     {
