--- a/src/devplex.GitServer.Web/Views/Repository/Log.cshtml
+++ b/src/devplex.GitServer.Web/Views/Repository/Log.cshtml
@@ -1,8 +1,20 @@
-﻿@model IEnumerable<CommitMessage>
+﻿@model CommitHistoryViewModel
+<div class="row">
+  <div class="large-12 columns">
+    <h1 class="small-headline">@Model.RepositoryPath</h1>
+  </div>
+</div>
+<div class="row">
+  <div class="large-12 columns">
+    <div class="section-container horizontal-nav" data-section="horizontal-nav">
+      @Html.Partial("_RepositoryNavigation")
+    </div>
+  </div>
+</div>
 <div class="row">
   <div class="large-12 columns">
     <table style="width: 100%;">
-      @foreach (var commit in Model)
+      @foreach (var commit in Model.Commits)
       {
         <tr>
           <td class="log-user-image">
