--- a/src/devplex.GitServer.Web/Views/Repository/Tree.cshtml
+++ b/src/devplex.GitServer.Web/Views/Repository/Tree.cshtml
@@ -1,7 +1,7 @@
 ﻿@model RepositoryTreeViewModel
 <div class="row">
   <div class="large-12 columns">
-    <h1 class="small-h1">@Model.RepositoryPath</h1>
+    <h1 class="small-headline">@Model.RepositoryPath</h1>
   </div>
 </div>
 <div class="row">
