F: Added binary extensions to config.

--- a/src/devplex.GitServer.Web/Views/Shared/_RepositoryNavigation.cshtml
+++ b/src/devplex.GitServer.Web/Views/Shared/_RepositoryNavigation.cshtml
@@ -22,7 +22,7 @@
 <section>
   <p class="title" data-section-title>
     <a href="@Url.Action("ZipArchive", "Repository", new { branch = Model.Branch, path = Model.RepositoryPath }, null)">
-      <i class="icon-archive"></i><span class="section-name">Download as Zip</span>
+      <i class="icon-archive"></i><span class="section-name">Download ZIP</span>
     </a>
   </p>
 </section>
