--- a/src/devplex.GitServer.Web/Views/Home/Index.cshtml
+++ b/src/devplex.GitServer.Web/Views/Home/Index.cshtml
@@ -1,26 +1,22 @@
-﻿@model RepositoriesViewModel
+﻿@model IEnumerable<string>
+<script>
+  window.fetchRepositoriesUrl = '@Url.Action("Repositories")';
+</script>
 <div class="row">
   <div class="large-12 columns">
     <h2>Repositories</h2>
     <form class="custom">
       <select id="organization">
         <option selected="selected" disabled="disabled">Select an organization</option>
-        @foreach (var organization in Model.Organizations)
+        @foreach (var organization in Model)
         {
-          <option>@organization.Key</option>
+          <option>@organization</option>
         }
       </select>
     </form>
-    @foreach (var organization in Model.Organizations)
-    {
-      <div id="organization_@(organization.Key)" class="repositories">
-        <ul>
-          @foreach (var repository in organization.Value)
-          {
-            <li>@Html.ActionLink(repository.Name, "Index", "Repository", new { path = repository.Name }, null)</li>
-          }
-        </ul>
-      </div>
-    }
+    <div id="repositories">
+      <ul>
+      </ul>
+    </div>
   </div>
 </div>
